--- a/src/main/resources/assets/eki/lang/zh_tw.lang
+++ b/src/main/resources/assets/eki/lang/zh_tw.lang
@@ -66,6 +66,22 @@ tile.enamel_wall_top_purple.name=搪瓷牆 (紫色頂部)
 tile.enamel_wall_top_red.name=搪瓷牆 (紅色頂部)
 tile.enamel_wall_top_yellow.name=搪瓷牆 (黃色頂部)
 tile.enamel_wall_top_white.name=搪瓷牆 (白色頂部)
+tile.tessera_black_dull.name=紙皮石 (深黑色)
+tile.tessera_cerulean_smooth.name=紙皮石 (蔚藍色)
+tile.tessera_cerulean.name=紙皮石 (平滑蔚藍色)
+tile.tessera_blue_slate.name=紙皮石 (石板藍)
+tile.tessera_blue_teal.name=紙皮石 (藍綠色)
+tile.tessera_brown_tortilla.name=紙皮石 (玉米餅棕色)
+tile.tessera_gray_dove.name=紙皮石 (灰色)
+tile.tessera_gray_fossil.name=紙皮石 (鴿子灰色)
+tile.tessera_gray.name=紙皮石 (化石灰)
+tile.tessera_green_fern.name=紙皮石 (蕨綠色)
+tile.tessera_green_lime.name=紙皮石 (檸檬綠)
+tile.tessera_orange_fire.name=紙皮石 (火橙色)
+tile.tessera_purple_heather.name=紙皮石 (石南紫)
+tile.tessera_red_rose.name=紙皮石 (紅色)
+tile.tessera_red.name=紙皮石 (玫瑰紅)
+tile.tessera_yellow.name=紙皮石 (黃色)
 //stairs
 tile.architectural_concrete_stairs.name=清水混凝土階梯
 tile.concrete_stairs.name=混凝土階梯
@@ -98,8 +114,41 @@ tile.wall_neon_light.name=牆上霓虹燈
 //ITEMINIT
 //TOOLS
 item.wrench.name=扳手
-item.wrench.tooltip=用來調整的工具(目前沒有功能)
+item.wrench.withouttag.tooltip=用來綁定錨點至票閘的工具。
+item.wrench.withtag.tooltip=用來綁定錨點至票閘的工具，已綁定至 %d, %d, %d。
+item.ticket.name=車票
+item.ticket.tooltip=值 %d 元。 :)
+item.rangefinder.name=測距儀
+item.rangefinder.tooltip=起始位置：%d, %d, %d.
 
 itemGroup.eki_block=Eki 方塊
 itemGroup.eki_station=Eki 車站
 itemGroup.eki_lights=Eki 燈具
+
+//TILEENTITYS
+tile.ticket_vendor.name=售票機
+tile.ticket_gate.name=票閘
+tile.anchor.name=錨點
+tile.anchor.tooltip=用來標記為車站中心的方塊。
+tile.anchor.warning.tooltip=在已綁定的情況下打掉這個方塊並不是個好主意......
+
+//GUIS
+container.ticket_vendor.state.success=出票成功！金額：%d
+container.ticket_vendor.state.shortage=您身上的餘額不足：%d
+container.ticket_vendor.state.failed=%d 並不是一個有效金額數目
+container.ticket_vendor.state.illegal=%s 玩家在售票機內輸入了無效的金額數目
+container.ticket_vendor.state.waiting=等待中......
+container.ticket_vendor.button.provide=出票
+container.ticket_vendor.button.clear=清除
+container.ticket_vendor.text.default=請輸入數字
+
+//TEXTS
+chat.type.text.anchoredamounts=該錨點已連接 %d 個票閘!
+chat.type.text.setpos=已從 %d, %d, %d 進站!
+chat.type.text.accessed=已從 %d, %d, %d 出站! 共花費了 %d, 行經了 %d 格!
+chat.type.text.notenoughvalue=無法出站! 票價僅值 %d, 需要 %d.
+chat.type.text.missingvalue=此票沒有價值可言!
+chat.type.text.missinganchor=請先選取一個錨點!
+chat.type.text.anchorlinked=已連結至錨點!
+chat.type.text.rangefinder.result=三維空間距離：%d，平面空間距離：%d。
+chat.type.text.rangefinder.getpos=成功綁定起始點至%d, %d, %d！
