--- a/src/main/resources/assets/eki/lang/zh_tw.lang
+++ b/src/main/resources/assets/eki/lang/zh_tw.lang
@@ -148,6 +148,7 @@ container.eki.ticket_vendor.button.withdraw=提款
 container.eki.ticket_vendor.text.default=請輸入數字
 container.eki.anchor.station.name=站名：
 container.eki.anchor.text=請輸入名稱
+container.eki.anchor.desc=錨點是用來作為車站基準點的方塊，在註冊車站後錨點才能發揮其功用。可用扳手向票閘或售票機進行綁定。
 container.eki.anchor.button.confirm=確認
 container.eki.button.clear=清除
 
@@ -162,6 +163,8 @@ chat.type.text.eki.anchorLinked=已連結至錨點!
 chat.type.text.eki.rangefinder.result=三維空間距離：%d，平面空間距離：%d。
 chat.type.text.eki.rangefinder.getPos=成功綁定起始點至%d, %d, %d！
 
+//COMMANDS
+chat.type.text.eki.command.stations.error.illegalType=未知的排序種類，輸入/stations help以獲得更多資訊。
 
 //SYSTEM MESSAGES
 chat.type.text.eki.versioncheckValid=你正運行Eki Mod最新版本!\n版本 >> %s
