--- a/src/main/resources/assets/eki/lang/en_us.lang
+++ b/src/main/resources/assets/eki/lang/en_us.lang
@@ -147,11 +147,25 @@ container.eki.ticket_vendor.state.permission=Insufficient permissions.
 container.eki.ticket_vendor.button.provide=Ticket
 container.eki.ticket_vendor.button.withdraw=Withdraw
 container.eki.ticket_vendor.text.default=Insert value.
-container.eki.anchor.station.name=Sta. Name:
-container.eki.anchor.text=Insert Name
+container.eki.anchor.station.name=Sta. Name: 
+container.eki.anchor.text=Insert Sta. Name
+container.eki.anchor.station.class=Station Class: 
 container.eki.anchor.desc=Anchor is a block to establish a station, it will only become a valid station once it registered. Can use wrench to bind ticket gate or ticket vendor to the anchor.
+container.eki.anchor.button.insert=Insert
 container.eki.anchor.button.confirm=Confirm
 container.eki.button.clear=Clear
+container.eki.manager.intro=Welcome to use Station Manager! Choose one station below to inspect their status:
+container.eki.manager.button.inspect=Inspect
+container.eki.manager.button.back=Back
+
+
+//STATION LVL
+container.eki.special_class=Special Class Sta.
+container.eki.first_class=First Class Sta.
+container.eki.second_class=Second Class Sta.
+container.eki.third_class=Third Class Sta.
+container.eki.simple_class=Simple Sta.
+container.eki.staffless_class=Staffless Sta.
 
 //TEXTS
 chat.type.text.eki.anchoredAmount=This anchor had been bound to %d ticket gates / ticket vendors!
